Fixed spacing and headings

--- a/src/app/blog/[slug]/blog-post.module.scss
+++ b/src/app/blog/[slug]/blog-post.module.scss
@@ -57,7 +57,6 @@
 }
 
 
-
 .blogPostContent {
   h2:first-of-type {
     padding-top: 0;
@@ -125,10 +124,9 @@
   h4,
   h5,
   h6 {
-    padding: var(--space-6) 0 0;
+    padding: var(--space-6) 0 var(--space-2);
     margin: 0;
-    font-weight: var(--weight-semibold);
-    // text-align: center;
+    font-weight: var(--weight-black);
 
     a,
     .link {
@@ -140,7 +138,6 @@
     }
   }
 
-  h3,
   h4,
   h5 {
     text-transform: uppercase;
